# indic_names_library

./: .gitignore  MANIFEST.in  README.md  README_USAGE.md  build_fast_sqlite_index_safe.py  import_all_india_villages_unique.py  import_kerala_lgd_directory.py  import_lgd_villages_xml_direct.py  import_multi_state_lgd_directory.py  import_south_india_admin_localities.py  pyproject.toml  setup.py
data/: all_india_villages_unique.txt  kerala_lgd_names_unique.txt  south_india_admin_localities_unique.txt  state_summary.json  unique_place_names.txt
data/by_state/: ANDAMAN_AND_NICOBAR_ISLANDS.json  ANDHRA_PRADESH.json  ARUNACHAL_PRADESH.json  ASSAM.json  BIHAR.json  CHANDIGARH.json  CHHATTISGARH.json  DELHI.json  GOA.json  GUJARAT.json  HARYANA.json  HIMACHAL_PRADESH.json  JAMMU_AND_KASHMIR.json  JHARKHAND.json  KARNATAKA.json  KERALA.json  LADAKH.json  LAKSHADWEEP.json  MADHYA_PRADESH.json  MANIPUR.json  MEGHALAYA.json  MIZORAM.json  NA.json  NAGALAND.json  ODISHA.json  PUDUCHERRY.json  PUNJAB.json  RAJASTHAN.json  SIKKIM.json  TAMIL_NADU.json  TELANGANA.json  THE_DADRA_AND_NAGAR_HAVELI_AND_DAMAN_AND_DIU.json  TRIPURA.json  UTTARAKHAND.json  WEST_BENGAL.json
data/by_state_geonames/: Andaman_Nicobar_Islands.txt  Andaman_and_Nicobar.txt  Andhra_Pradesh.txt  Arunachal_Pradesh.txt  Assam.txt  Bihar.txt  Chandigarh.txt  Chattisgarh.txt  Chhattisgarh.txt  Dadra_and_Nagar_Haveli_and_Daman_and_Diu.txt  Delhi.txt  Goa.txt  Gujarat.txt  Haryana.txt  Himachal_Pradesh.txt  Jammu_Kashmir.txt  Jammu_and_Kashmir.txt  Jharkhand.txt  Karnataka.txt  Kerala.txt  Ladakh.txt  Lakshadweep.txt  Madhya_Pradesh.txt  Maharashtra.txt  Manipur.txt  Meghalaya.txt  Mizoram.txt  Nagaland.txt  Odisha.txt  Pondicherry.txt  Puducherry.txt  Punjab.txt  Rajasthan.txt  Sikkim.txt  Tamil_Nadu.txt  Telangana.txt  Tripura.txt  UNKNOWN.txt  Uttar_Pradesh.txt  Uttarakhand.txt  (+1 more)
indic_places/: __init__.py  cli.py  core.py  tagger.py
indic_places/data/: address_terms.txt  custom_places.txt  places.json
scripts/: build_data.py  build_index.py
tests/: test_engine.py  test_indic_places.py
