[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indic-places"
version = "1.2.2"
description = "Indian place-name lookup, OCR address cleanup, and merged-word address segmentation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Tinku Kumar" }]
keywords = ["india", "places", "address", "ocr", "symspell", "segmentation", "nlp", "pincode"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.scripts]
indic-places = "indic_places.cli:main"

[project.urls]
Homepage = "https://github.com/Tinku746286/indic_names_library"
Repository = "https://github.com/Tinku746286/indic_names_library"

[tool.setuptools.packages.find]
where = ["."]
include = ["indic_places*"]

[tool.setuptools.package-data]
indic_places = ["data/*.json", "data/*.json.gz", "data/*.txt", "py.typed"]
